# eko

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Gemfile  MAINTAINERS.md  README.md  _config.yml  about.md  benchmarks_requirements.txt  cern_polygamma.c  cern_polygamma.hpp  cinterface.cpp  dev_requirements.txt  docs_requirements.txt  download-test-assets.sh  env_back_op_gen.txt  env_plots.txt  evolvepdf.py  flake.nix  index.md  numba-0.65.0-cp314-cp314-manylinux2014_x86_64.manylinux_2_17_x86_64.whl  pyproject.toml  pyproject.toml.patch  refactor-bowler.py  rustify.sh  setup.cfg  setup.py  test_requirements.txt
benchmarks/: .gitignore  CT14_bench.py  CT18_bench.py  DSSV_bench.py  FF_LHAPDF_bench.py  HERA20_bench.py  LHA-Benchmarks.py  LHA-LO.py  LHA-benchmark-paper.py  LHA-benchmark-paper.yaml  LHAPDF-benchmarks.py  NNPDF_bench.py  apfel_bench.py  apfel_bench_qed.py  asv.conf.json  banana.yaml  benchmark_against_LHA.py  benchmark_against_LHAPDF.py  conftest.py  eko_bench.py  fix_problems.py  lha_paper_bench.py  pegasus_bench.py  pyproject.toml  read_LHA_pdf.py  sandbox.py  setup.py  tools.py
benchmarks/data/: .gitignore  LHA.yaml  read_LHA_pdf.py  test.py
benchmarks/data/ekov000/operators/: EFMRliCNGks=.npz.lz4
benchmarks/data/ekov013/: card_test.py  test.py
benchmarks/data/ekov013/operators/: AAAAAACIw0A=.npz.lz4
benchmarks/data/ekov014/operators/: EFMRliCNGks=.npz.lz4
benchmarks/data/ekov015/operators/: EFMRliCNGks=.npz.lz4
benchmarks/eko/: benchmark_ad.py  benchmark_alphaem.py  benchmark_evol_to_unity.py  benchmark_inverse_matching.py  benchmark_iveverse_matching.py  benchmark_msbar_evolution.py  benchmark_strong_coupling.py
benchmarks/ekobox/: benchmark_evol_pdf.py  benchmark_gen_info.py  benchmark_gen_op.py  benchmark_gen_theory.py  benchmark_utils.py  conftest.py  utils.py
benchmarks/ekobox/fakepdf/myCT14llo_NF3/: myCT14llo_NF3.info
benchmarks/ekobox/genpdf/: benchmark_cli.py  benchmark_export.py  benchmark_flavors.py  benchmark_genpdf_cli.py  benchmark_genpdf_export.py  benchmark_genpdf_flavors.py  benchmark_genpdf_init.py  benchmark_genpdf_load.py  benchmark_init.py  benchmark_load.py  utils.py
benchmarks/ekomark/: LHA.py  __init__.py  apfel_benchmark.py  apfel_utils.py  df_dict.py  lhapdf_benchmark.py  plots.py  runner.py  toyLH.py
benchmarks/ekomark/benchmark/: runner.py
benchmarks/ekomark/data/: __init__.py  db.py  operators.py
benchmarks/ekomark/navigator/: __init__.py  navigator.py
benchmarks/ekomark_old/: df_dict.py  plots.py  runner.py  toyLH.py
benchmarks/ekore/: benchmark_ad.py  benchmark_pegasus_ad_us_as2.py  benchmark_pegasus_mellin.py  benchmark_pegasus_ome_ps_as2.py
benchmarks/input/: LO-EXA10-l30m20r4.yaml  NLO-EXA10-l30m20r4.yaml  NLO-TRN10-l30m20r4.yaml  apf-LO-EXA10-l30m20r4.yaml  apf-NLO-EXA10-l30m20r4.yaml  apf-NLO-TRN10-l30m20r4.yaml  apf-NLO-TRN2-l30m20r4.yaml  apf-fast.yaml  fast.yaml
benchmarks/input/APFEL/operators/: 10-iter10-l30m20r4.yaml  1e4-iter10-l30m20r4.yaml  1e4-iter30-l30m20r4.yaml  iter10-l30m20r4.yaml  iter30-l30m20r4.yaml
benchmarks/input/APFEL/theories/: LO-EXA-FFNS3-IC.yaml  LO-EXA-FFNS3-IC0.yaml  LO-EXA-FFNS3.yaml  LO-EXA-FFNS4.yaml  LO-EXA-ZMVFNS-IC.yaml  NLO-DEXA.yaml  NLO-EXP.yaml  NLO-PEXA.yaml  NLO-TRN.yaml
benchmarks/input/LHA/: NLO-EXA10-l30m20r4.yaml  NLO-EXA10-svh-l30m20r4.yaml  NLO-EXA10-svl-l30m20r4.yaml  NLO-FFNS-EXA10-svl-l30m20r4.yaml  NLO-OTRN10-l30m20r4.yaml  NLO-PEXP10c10-l30m20r4.yaml  NLO-TRN10-l30m20r4.yaml  NLO-ZMVFNS-EXA10-svl-l30m20r4.yaml
benchmarks/input/LHA/operators/: iter10-l30m20r4.yaml  iter2-l30m20r4.yaml
benchmarks/input/LHA/theories/: LO-EXA-FFNS.yaml  LO-EXA-ZMVFNS.yaml  LO-EXA.yaml  LO-TRN.yaml  NLO-DEXP.yaml  NLO-EXA.yaml  NLO-FFNS-svh.yaml  NLO-FFNS-svl.yaml  NLO-OTRN.yaml  NLO-PEXP.yaml  NLO-ZMVFNS-svh.yaml  NLO-ZMVFNS-svl.yaml
benchmarks/input/LHAPDF/operators/: 10-iter10-l30m20r4.yaml  10-iter2-l30m20r4.yaml  1e3-iter10-l30m20r4.yaml  1e4-iter10-l30m20r4.yaml  2-iter10-l30m20r4.yaml
benchmarks/input/oldLHA/: LO-TRN2-l30m20r4.yaml  NLO-DEXA-l30m20r4.yaml  NLO-DEXP-l30m20r4.yaml  NLO-EXA30-l30m20r4.yaml  NLO-EXP10-l30m20r4.yaml  NLO-FFNS-EXA10-svh-l30m20r4.yaml  NLO-PEXA10c10-l30m20r4.yaml  NLO-ZMVFNS-EXA10-svh-l30m20r4.yaml
benchmarks/performance/: harmonics.py
benchmarks/runners/: CT14_bench.py  LHAPDF_bench.py  LHA_bench.py  NNPDF_bench.py  apfel.py  apfel_bench.py  eko_bench.py  lha.py  lha_paper_bench.py  paper_lha_bench.py  pegasus_bench.py  sandbox.py
crates/: Cargo.toml  README.md  bump-versions.nu  bump-versions.py  doc-header.html  integrate.py  katex-header.html  make_bib.py  parse-abbrev.py  refs.bib  release.json  try.sh
crates/dekoder/: Cargo.toml  README.md  pyproject.toml
crates/dekoder/src/: eko.rs  inventory.rs  lib.rs  metadata.rs
crates/dekoder/tests/: eko.tar  load.rs  test_load.rs
crates/dekoder/tests/data/: download.sh  v0.15.tar
crates/eko/: Cargo.toml  README.md  pyproject.toml
crates/eko/src/: bib.rs  lib.rs  mellin.rs
crates/ekore/: Cargo.toml  README.md  refs.bib
crates/ekore/src/: anomalous_dimensions.rs  bib.rs  constants.rs  harmonics.rs  lib.rs  math_constants.rs  operator_matrix_elements.rs  pid.rs  qcd_constants.rs  util.rs
crates/ekore/src/anomalous_dimensions/: polarized.rs  unpolarized.rs
crates/ekore/src/anomalous_dimensions/polarized/: spacelike.rs
crates/ekore/src/anomalous_dimensions/unpolarized/: spacelike.rs
crates/ekore/src/harmonics/: cache.rs  g_functions.rs  log_functions.rs  polygamma.rs  w1.rs  w2.rs  w3.rs  w4.rs  w5.rs
crates/ekore/src/operator_matrix_elements/: unpolarized.rs
crates/ekore_capi/: Cargo.toml  README.md  cbindgen.toml
crates/ekore_capi/src/: ad_ps.rs  ad_us.rs  lib.rs  ome_us.rs
crates/ekuad/: Cargo.toml  pyproject.toml
crates/ekuad/.github/workflows/: CI.yml
crates/ekuad/src/: lib.rs
extras/harmonics_w5/: README.md  pyproject.toml
extras/harmonics_w5/src/harmonics_w5/: __init__.py
extras/harmonics_w5/tests/: test_f_functions.py
(+1067 files in other folders)
