[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = [
  "A. Barontini <andrea.barontini@mi.infn.it>",
  "A. Candido <alessandro.candido@mi.infn.it>",
  "F. Hekhorn <felix.hekhorn@mi.infn.it>",
  "N. Laurenti <niccolo.laurenti@mi.infn.it>",
  "G. Magni <gmagni@nikhef.nl>",
  "T. Sharma <tanishq.sharma@alumni.cern>",
]
description = "Evolution Kernel Operators"
readme = "README.md"
categories = ["science"]
edition = "2021"
keywords = ["physics"]
license = "GPL-3.0-or-later"
repository = "https://github.com/NNPDF/eko"
rust-version = "1.70.0"
version = "0.0.1"

[workspace.dependencies]
# Internal crates
ekore = { path = "crates/ekore", version = "0.0.1" }

# External dependencies
lz4_flex = "0.11.6"
ndarray = "0.15.4"
ndarray-npy = "0.8.1"
num = "0.4.1"
tar = "0.4.46"
thiserror = "1.0.63"
yaml-rust2 = "0.8"

# Dev dependencies
assert_fs = "1.1.2"
float-cmp = "0.9.0"
GSL = "7.0"
predicates = "3.1.2"
