[package]
name = "dekoder"

authors.workspace = true
description.workspace = true
readme.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "doc-header.html"]

[dependencies]
tar = "0.4.41"
hashbrown = "0.14"
glob = "0.3.1"
float-cmp = "0.9.0"
yaml-rust2 = "0.8"
lz4_flex = "0.9.2"
ndarray = "0.15.4"
ndarray-npy = "0.8.1"
