[package]
name = "dekoder"
readme = "README.md"

authors.workspace = true
description.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "doc-header.html"]

[dependencies]
tar.workspace = true
yaml-rust2.workspace = true
lz4_flex.workspace = true
ndarray.workspace = true
ndarray-npy.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_fs.workspace = true
predicates.workspace = true
