[package]
name = "ekore_capi"
description = "C API for the ekore crate"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "doc-header.html"]

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
capi = []

[dependencies]
ekore = { path = "../ekore", version = "0.0.1" }
num = "0.4.1"

[package.metadata.capi.header]
subdirectory = "ekore_capi"
name = "ekore_capi"

[package.metadata.capi.library]
name = "ekore_capi"
